outputs/main/reevo-qd_bpp_online_2025-08-07_22-49-41/problem_iter8_response5.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 41
    eps = 1e- the code cutoff. Wait, that's not correct. 
            ^
SyntaxError: invalid decimal literal
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/SLOC.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 41
    eps = 1e- the code cutoff. Wait, that's not correct. 
            ^
SyntaxError: invalid decimal literal
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/cyclomatic_complexity.py", line 7, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 41
    eps = 1e- the code cutoff. Wait, that's not correct. 
            ^
SyntaxError: invalid decimal literal
